plugins {
    id 'java'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'org.buktify'
version = '1.0.6'
sourceCompatibility = "1.9"

dependencies {
    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
    compileOnly 'org.projectlombok:lombok:1.18.26'
    annotationProcessor 'org.projectlombok:lombok:1.18.26'
    implementation 'org.jetbrains:annotations:24.0.1'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.26'
    testImplementation 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
    testCompileOnly 'org.projectlombok:lombok:1.18.26'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
}

publishing {
    repositories {
        maven {
            name = 'crazy-repo'
            url = 'https://repo.crazylegend.space/public'
            credentials {
                username = System.getenv("CRAZY_REPO_USER")
                password = System.getenv("CRAZY_REPO_PASSWORD")
            }
        }
    }

    publications {
        mavenJava(MavenPublication) {
            artifactId = 'configurate'
            group = 'org.buktify'
            version = '1.0.6'
            from components.java
            versionMapping {
                usage('java-api') {
                    fromResolutionOf('runtimeClasspath')
                }
                usage('java-runtime') {
                    fromResolutionResult()
                }
            }
        }
    }
}

test {
    useJUnitPlatform()
}

targetCompatibility = JavaVersion.VERSION_1_9
